--- a/app/Blueprints/site/templates/admin/course/add_course.html
+++ b/app/Blueprints/site/templates/admin/course/add_course.html
@@ -2,10 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cafelingua : add course</title>
+    <title>Add Course</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="maximum-scale=1, width=1080">
+    <link rel="shortcut icon" href="../assets/img/icon.png">
+    <link rel="stylesheet" href="../assets/scss/admin.min.css">
 </head>
 <body>
+  <div class="AdminDashboard">
+    <div class="CafeColor tab"></div>
+    <div class="MenuPanel tab">
+      <img src="../assets/img/logox500.png" alt="logo">
+      <div class="Menu">
+        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
+        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
+        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
+        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
+        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
+        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
+      </div>
+      <div class="LogoutButton">
+        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
+      </div>
+    </div>
+  </div>
 
+  <div class="AddCourse">
+    <div class="UserDetail">
+      <h3>Dr. Deepak Mashru</h3>
+      <img src="https://0.academia-photos.com/6365507/3086920/3632179/s200_deepak.mashru.jpg" alt="">
+      <!-- <p><i class="fas fa-angle-down"></i></p> -->
+    </div>
+
+    <div class="Title">
+      <h3><i class="fas fa-chevron-right"></i>Courses</h3>
+    </div>
+    <br><br>
+
+    <div class="Board">
+      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Courses</p></a></span>
+      <span class="button"><a href="#"><i class="fas fa-book-open"></i><p>Browse Courses</p></a></span>
+      <br><br><br>
+      <p class="sub1"><i class="fas fa-chevron-right"></i>Add new Course</p>
+      <br><br>
+
+      <div class="CourseForm">
+        <form action="/" method="post">
+          <input type="text" name="name" placeholder="Name of The Course" /><br>
+          <br>
+          <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Modules</p>
+          <br>
+          <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Module 1</label><br>
+          <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Module 2</label><br>
+          <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Module 3</label><br>
+          <button><i class="fas fa-plus-circle"></i>Add</button>
+        </form>
+      </div>
+    </div>
+
+  </div>
+<!--
     <h1>Courses</h1>
     <ul>
         <li><a href="/course">Browse courses</a></li>
@@ -15,14 +71,14 @@
     <h2>Add new Course</h2>
     <div class="msg">{{msg}}</div>
     <form action="" method="post">
-        <input type="text" name="name" placeholder="name of the course" /><br>
+          <input type="text" name="name" placeholder="name of the course" /><br>
         <h4>select courses:</h4>
         {% for module in modules %}
         <input type="checkbox" name="moduleList[]" value="{{module.id}}" id="mod{{module.id}}" /> <label
             for="mod{{module.id}}">{{module.name}}</label><br>
         {% endfor %}
         <br><button>add course</button>
-    </form>
+    </form> -->
 
 </body>
 </html>
