--- a/app/Blueprints/site/templates/admin/dashboard.html
+++ b/app/Blueprints/site/templates/admin/dashboard.html
@@ -14,7 +14,7 @@
     <li><a href="/course">courses</a></li>
     <li><a href="/batch">batches</a></li>
     <li><a href="/test">tests</a></li>
-    <li><a href="/logout">logout</a></li>
+    <li><a href="#">logout</a></li>
 </ul>
 
 </body>
