--- a/app/Blueprints/site/templates/admin/module/browse.html
+++ b/app/Blueprints/site/templates/admin/module/browse.html
@@ -2,10 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cafelingua : browse modules</title>
+    <title>Browse Modules</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="maximum-scale=1, width=1080">
+    <link rel="shortcut icon" href="../assets/img/icon.png">
+    <link rel="stylesheet" href="../assets/scss/admin.min.css">
 </head>
 <body>
-    <h1>Modules</h1>
+  <div class="AdminDashboard">
+    <div class="CafeColor tab"></div>
+    <div class="MenuPanel tab">
+      <img src="../assets/img/logox500.png" alt="logo">
+      <div class="Menu">
+        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
+        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
+        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
+        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
+        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
+        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
+      </div>
+      <div class="LogoutButton">
+        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="BrowseModule">
+    <div class="UserDetail">
+      <h3>Dr. Deepak Mashru</h3>
+      <img src="https://0.academia-photos.com/6365507/3086920/3632179/s200_deepak.mashru.jpg" alt="">
+      <!-- <p><i class="fas fa-angle-down"></i></p> -->
+    </div>
+
+    <div class="Title">
+      <h3><i class="fas fa-chevron-right"></i>Modules</h3>
+    </div>
+    <br><br>
+
+    <div class="Board">
+      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Module</p></a></span>
+      <span class="button"><a href="#"><i class="fas fa-bookmark"></i><p>Browse Module</p></a></span>
+      <br><br><br>
+      <p class="sub1"><i class="fas fa-chevron-right"></i>Currently Registered Modules</p>
+      <br><br>
+
+      <table>
+        <thead>
+          <tr>
+              <th>No.</th>
+              <th>Name</th>
+              <th>Description</th>
+              <th>Duration (Days)</th>
+              <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Modules 1</td>
+            <td>Modules Description</td>
+            <td>10 Days</td>
+            <td>
+              <a href="#">About</a>
+              <a href="#">Delete</a>
+              <a href="#">Update</a>
+            </td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Modules 1</td>
+            <td>Modules Description</td>
+            <td>10 Days</td>
+            <td>
+              <a href="#">About</a>
+              <a href="#">Delete</a>
+              <a href="#">Update</a>
+            </td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Modules 1</td>
+            <td>Modules Description</td>
+            <td>10 Days</td>
+            <td>
+              <a href="#">About</a>
+              <a href="#">Delete</a>
+              <a href="#">Update</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+    <!-- <h1>Modules</h1>
     <ul>
         <li><a href="#">browse modules</a></li>
         <li><a href="/module/new">add modules</a></li>
@@ -35,6 +124,6 @@
                 </tr>
             {% endfor %}
         </tbody>
-    </table>
+    </table> -->
 </body>
 </html>
