--- a/app/Blueprints/site/templates/admin/test/about.html
+++ b/app/Blueprints/site/templates/admin/test/about.html
@@ -2,9 +2,111 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cafelingua : About test</title>
+    <title>About Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="maximum-scale=1, width=1080">
+    <link rel="shortcut icon" href="../assets/img/icon.png">
+    <link rel="stylesheet" href="../assets/scss/admin.min.css">
 </head>
 <body>
+  <div class="AdminDashboard">
+    <div class="CafeColor tab"></div>
+    <div class="MenuPanel tab">
+      <img src="../assets/img/logox500.png" alt="logo">
+      <div class="Menu">
+        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
+        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
+        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
+        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
+        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
+        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
+      </div>
+      <div class="LogoutButton">
+        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="TestAbout">
+    <div class="UserDetail">
+      <h3>Dr. Deepak Mashru</h3>
+      <img src="https://0.academia-photos.com/6365507/3086920/3632179/s200_deepak.mashru.jpg" alt="">
+      <!-- <p><i class="fas fa-angle-down"></i></p> -->
+    </div>
+
+    <div class="Title">
+      <h3><i class="fas fa-chevron-right"></i>Tests</h3>
+    </div>
+    <br><br>
+
+    <div class="Board">
+      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Test</p></a></span>
+      <span class="button"><a href="#"><i class="fas fa-file-alt"></i><p>Browse Test</p></a></span>
+      <br><br><br>
+
+      <p class="sub1"><i class="fas fa-chevron-right"></i>About Test : {{test.name}}</p>
+      <br><br>
+
+      <p class="sub1" style="font-size:17px;"><i class="fas fa-chevron-right"></i>Students Appearing In The Exam</p>
+      <br>
+
+      <span class="UserName"><i class="fas fa-user-circle"></i><p>Deval Koradiya</p></span>
+      <span class="UserName"><i class="fas fa-user-circle"></i><p>Sameer Manek</p></span>
+      <br><br>
+
+      <p class="sub1" style="font-size:17px;"><i class="fas fa-chevron-right"></i>Details</p>
+      <br>
+      <table class="Detail">
+          <tr>
+              <td><i class="fas fa-calendar-alt"></i>Date</td>
+              <td>:</td>
+              <td>11-11-1997</td>
+          </tr>
+          <tr>
+              <td><i class="fas fa-align-justify"></i>Type</td>
+              <td>:</td>
+              <td>Type 1</td>
+          </tr>
+          <tr>
+              <td><i class="fas fa-dot-circle"></i>Graded</td>
+              <td>:</td>
+              <td>10</td>
+          </tr>
+      </table>
+      <br>
+      <p class="sub1" style="font-size:17px;"><i class="fas fa-chevron-right"></i>Student Grades</p>
+      <br>
+      <table class="Grades">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Marks</th>
+            </tr>
+        </thead>
+        <tbody>
+          <tr>
+              <td>{{student.name}}</td>
+              <td>{{student.grade}}</td>
+          </tr>
+          <tr>
+              <td>{{student.name}}</td>
+              <td>{{student.grade}}</td>
+          </tr>
+          <tr>
+              <td>{{student.name}}</td>
+              <td>{{student.grade}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+    </div>
+  </div>
+
+
+
+
+<!--
+
 
     <h1>Tests</h1>
     <ul>
@@ -55,6 +157,6 @@
         </tbody>
     </table>
 
-    {% endif %}
+    {% endif %} -->
 </body>
 </html>
