--- a/app/Blueprints/site/templates/admin/test/create_test.html
+++ b/app/Blueprints/site/templates/admin/test/create_test.html
@@ -2,14 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cafelingua : create test</title>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <title>Create Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="maximum-scale=1, width=1080">
+    <link rel="shortcut icon" href="../assets/img/icon.png">
+    <link rel="stylesheet" href="../assets/scss/admin.min.css">
 </head>
 <body>
+  <div class="AdminDashboard">
+    <div class="CafeColor tab"></div>
+    <div class="MenuPanel tab">
+      <img src="../assets/img/logox500.png" alt="logo">
+      <div class="Menu">
+        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
+        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
+        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
+        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
+        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
+        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
+      </div>
+      <div class="LogoutButton">
+        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
+      </div>
+    </div>
+  </div>
 
+  <div class="CreateTest">
+    <div class="UserDetail">
+      <h3>Dr. Deepak Mashru</h3>
+      <img src="https://0.academia-photos.com/6365507/3086920/3632179/s200_deepak.mashru.jpg" alt="">
+      <!-- <p><i class="fas fa-angle-down"></i></p> -->
+    </div>
+
+    <div class="Title">
+      <h3><i class="fas fa-chevron-right"></i>Tests</h3>
+    </div>
+    <br><br>
+
+    <div class="Board">
+      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Test</p></a></span>
+      <span class="button"><a href="#"><i class="fas fa-file-alt"></i><p>Browse Test</p></a></span>
+      <br><br><br>
+      <p class="sub1"><i class="fas fa-chevron-right"></i>Add New Test</p>
+      <br><br>
+
+      <div class="TestForm">
+        <form action="/" method="post">
+          <input type="text" name="name" placeholder="Name" /><br>
+          <input type="date" name="date" placeholder="Date" /><br>
+          <br>
+          <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Batch</p>
+          <select name="batch" id="batch">
+              <option value="">Batch 1</option>
+              <option value="">Batch 1</option>
+              <option value="">Batch 1</option>
+          </select><br>
+          <br>
+          <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Student</p><br>
+          <label><input type="checkbox" name="StudentList[]" value="" /><span class="checkmark"></span> Student 1</label><br>
+          <label><input type="checkbox" name="StudentList[]" value="" /><span class="checkmark"></span> Student 2</label><br>
+          <input type="text" name="type" placeholder="Type of Test" /><br><br>
+          <button><i class="fas fa-plus-circle"></i>Add</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+<!--
     <h1>Tests</h1>
     <ul>
         <li><a href="/test">Browse tests</a></li>
@@ -72,6 +131,6 @@
 	$("#batch").change(function(){
         fetchStudents()
     });
-</script>
+</script> -->
 </body>
 </html>
