--- a/app/Blueprints/site/templates/admin/batch/browse.html
+++ b/app/Blueprints/site/templates/admin/batch/browse.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Batches</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="maximum-scale=1, width=1080">
-    <link rel="shortcut icon" href="../assets/img/icon.png">
-    <link rel="stylesheet" href="../assets/scss/admin.min.css">
-</head>
-<body>
-  <div class="AdminDashboard">
-    <div class="CafeColor tab"></div>
-    <div class="MenuPanel tab">
-      <img src="../assets/img/logox500.png" alt="logo">
-      <div class="Menu">
-        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
-        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
-        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
-        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
-        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
-        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
-      </div>
-      <div class="LogoutButton">
-        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
-      </div>
-    </div>
-  </div>
+{% extends 'admin/master.html' %}
+{% block body %}
 
   <div class="BatchesDetail">
     <div class="UserDetail">
@@ -85,5 +59,5 @@
       </table>
     </div>
   </div>
-</body>
-</html>
+
+{% endblock %}
