--- a/app/Blueprints/site/templates/admin/dashboard.html
+++ b/app/Blueprints/site/templates/admin/dashboard.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>cafelingua : admin dashboard</title>
-</head>
-<body>
-
-<h1>Welcome {{usr.first_name}}</h1>
-
-<ul>
-    <li><a href="/student">student</a></li>
-    <li><a href="/module">modules</a></li>
-    <li><a href="/course">courses</a></li>
-    <li><a href="/batch">batches</a></li>
-    <li><a href="/test">tests</a></li>
-    <li><a href="#">logout</a></li>
-</ul>
-
-</body>
-</html>
+{% extends 'admin/master.html' %}
