--- a/app/Blueprints/site/templates/admin/student/browse.html
+++ b/app/Blueprints/site/templates/admin/student/browse.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Students List</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="maximum-scale=1, width=1080">
-    <link rel="shortcut icon" href="../assets/img/icon.png">
-    <link rel="stylesheet" href="../assets/scss/admin.min.css">
-</head>
-<body>
-  <div class="AdminDashboard">
-    <div class="CafeColor tab"></div>
-    <div class="MenuPanel tab">
-      <img src="../assets/img/logox500.png" alt="logo">
-      <div class="Menu">
-        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
-        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
-        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
-        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
-        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
-        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
-      </div>
-      <div class="LogoutButton">
-        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
-      </div>
-    </div>
-  </div>
+{% extends 'admin/master.html' %}
+{% block body %}
 
   <div class="BrowseStudent">
     <div class="UserDetail">
@@ -46,55 +20,30 @@
       <p class="sub1"><i class="fas fa-chevron-right"></i>Currently Registered Students</p>
       <br><br>
 
-      <table>
-        <thead>
+      <table border="1" cellpadding="2">
+          <thead>
           <tr>
-              <th>No.</th>
-              <th>First Name</th>
-              <th>Last Name</th>
+              <th>#</th>
+              <th>first name</th>
+              <th>last name</th>
               <th>Email</th>
               <th>Phone</th>
-              <th>Actions</th>
+              <th>actions</th>
           </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Deval</td>
-            <td>Koradiya</td>
-            <td>patel@devalkoradiya.in</td>
-            <td>+91 8866227222</td>
-            <td>
-              <a href="#">About</a>
-              <a href="#">Delete</a>
-              <a href="#">Update</a>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Deval</td>
-            <td>Koradiya</td>
-            <td>patel@devalkoradiya.in</td>
-            <td>+91 8866227222</td>
-            <td>
-              <a href="#">About</a>
-              <a href="#">Delete</a>
-              <a href="#">Update</a>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Deval</td>
-            <td>Koradiya</td>
-            <td>patel@devalkoradiya.in</td>
-            <td>+91 8866227222</td>
-            <td>
-              <a href="#">About</a>
-              <a href="#">Delete</a>
-              <a href="#">Update</a>
-            </td>
-          </tr>
-        </tbody>
+          </thead>
+
+          <tbody>
+              {% for student in students %}
+                  <tr>
+                      <td>{{loop.index}}</td>
+                      <td>{{student.fname}}</td>
+                      <td>{{student.lname}}</td>
+                      <td>{{student.email}}</td>
+                      <td>{{student.mobile}}</td>
+                      <td><a href="#">deactivate</a></td>
+                  </tr>
+              {% endfor %}
+          </tbody>
       </table>
     </div>
   </div>
@@ -132,5 +81,4 @@
             {% endfor %}
         </tbody>
     </table> -->
-</body>
-</html>
+{% endblock %}
