--- a/app/Blueprints/site/templates/admin/master.html
+++ b/app/Blueprints/site/templates/admin/master.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="{{url_for("static", filename = "img/icon.png")}}" />
         <link rel="stylesheet" href="{{url_for("static", filename = "scss/admin.min.css")}}" />
+		<link rel="stylesheet" href="{{url_for("static", filename = "css/css_for_charts.css")}}" />
+		{% block head %}
+		{% endblock %}
     </head>
     <body>
         <div class="AdminDashboard">
@@ -25,8 +28,10 @@
             </div>
           </div>
         </div>
+		<div style="float: right">
         {% block body %}
 
         {% endblock %}
+		</div>
     </body>
 </html>
