--- a/app/Blueprints/site/templates/admin/student/about.html
+++ b/app/Blueprints/site/templates/admin/student/about.html
@@ -3,6 +3,7 @@
 {% block head %}
 {{ super() }}
 <script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3-dsv.v1.min.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -51,66 +52,70 @@ window.onload = function () {
 	var mod2 = "#756bb1";
 	var mod3 = "#31a354";
 
+	text = ""
+		fetch("/api/student/scores/{{student.id}}", {credentials: 'same-origin', method: 'GET'}).then( (res) => res.text().then( function (data) {text = data; createGraph()}) )
 
-	data = d3.csv( "{{ url_for('static',filename="s.csv") }}").then(function(d) {
+		function createGraph() {
+
+			d = d3.csvParse(text)
+
+				var svg = d3.select("svg"),
+    		margin = {top: 20, right: 20, bottom: 30, left: 40},
+    		width = +svg.attr("width") - margin.left - margin.right,
+    		height = +svg.attr("height") - margin.top - margin.bottom;
+
+			var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
+    		y = d3.scaleLinear().rangeRound([height, 0]);
+
+			var g = svg.append("g")
+    			.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+			grade = []
+				d.forEach( function(i) {
+					console.log(i)
+						grade.push(i.grade) 
+				})
+
+  			x.domain(d.map(function(d) { return d.test; }));
+  			y.domain([0, 9]);
+
+  			g.append("g")
+      			.attr("class", "axis axis--x")
+      			.attr("transform", "translate(0," + height + ")")
+      			.call(d3.axisBottom(x));
+
+  			g.append("g")
+      			.attr("class", "axis axis--y")
+      			.call(d3.axisLeft(y).ticks(9))
+    			.append("text")
+      			.attr("transform", "rotate(-90)")
+      			.attr("y", 6)
+      			.attr("dy", "0.71em")
+      			.attr("text-anchor", "end")
+      			.text("Frequency");
+
+  			g.selectAll(".bar")
+    			.data(d)
+    			.enter().append("rect")
+      			.attr("class", "bar")
+      			.attr("x", function(d) { return x(d.test); })
+      			.attr("y", function(d) { return y(d.grade); })
+      			.attr("width", x.bandwidth())
+				.attr("fill", (d) => {
+					if (d.module=="0") {
+						return mod1
+					}
+					if (d.module=="1") {
+						return mod2
+					}
+					if (d.module=="2") {
+						return mod3
+					}
 
 
-		var svg = d3.select("svg"),
-    	margin = {top: 20, right: 20, bottom: 30, left: 40},
-    	width = +svg.attr("width") - margin.left - margin.right,
-    	height = +svg.attr("height") - margin.top - margin.bottom;
-
-		var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
-    	y = d3.scaleLinear().rangeRound([height, 0]);
-
-		var g = svg.append("g")
-    		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-		marks = []
-			d.forEach( function(i) {
-				marks.push(i.marks) 
-			})
-
-  		x.domain(d.map(function(d) { return d.test; }));
-  		y.domain([0, 9]);
-
-  		g.append("g")
-      		.attr("class", "axis axis--x")
-      		.attr("transform", "translate(0," + height + ")")
-      		.call(d3.axisBottom(x));
-
-  		g.append("g")
-      		.attr("class", "axis axis--y")
-      		.call(d3.axisLeft(y).ticks(9))
-    		.append("text")
-      		.attr("transform", "rotate(-90)")
-      		.attr("y", 6)
-      		.attr("dy", "0.71em")
-      		.attr("text-anchor", "end")
-      		.text("Frequency");
-
-  		g.selectAll(".bar")
-    		.data(d)
-    		.enter().append("rect")
-      		.attr("class", "bar")
-      		.attr("x", function(d) { return x(d.test); })
-      		.attr("y", function(d) { return y(d.marks); })
-      		.attr("width", x.bandwidth())
-			.attr("fill", (d) => {
-				if (d.module=="l") {
-					return mod1
-				}
-				if (d.module=="s") {
-					return mod2
-				}
-				if (d.module=="w") {
-					return mod3
-				}
-
-
-			}	)
-      	.attr("height", function(d) { return height - y(d.marks); });
-	});
+				}	)
+      		.attr("height", function(d) { return height - y(d.grade); });
+		}
 
 }
 
