--- a/app/Blueprints/site/templates/admin/master.html
+++ b/app/Blueprints/site/templates/admin/master.html
@@ -21,7 +21,7 @@
               <a href="/test"><i class="fas fa-file-alt"></i><p>Tests</p></a>
             </div>
             <div class="LogoutButton">
-              <a href="#"><i class="fas fa-sign-out-alt"></i></a>
+              <a href="/logout"><i class="fas fa-sign-out-alt"></i></a>
             </div>
           </div>
         </div>
