avg found and returned

--- a/app/Blueprints/site/templates/admin/module/add_module.html
+++ b/app/Blueprints/site/templates/admin/module/add_module.html
@@ -24,6 +24,7 @@
           <input type="text" name="name" placeholder="Name of Module" /><br>
           <textarea name="desc" cols="30" rows="10" placeholder="Description" style="resize: none;"></textarea><br>
           <input type="text" name="days" max="4" placeholder="Days" /><br>
+          <input type="text" name="maxMarks" value="" placeholder="maximum marks" />
           <button><i class="fas fa-plus-circle"></i>Add</button>
         </form>
       </div>
