--- a/app/Blueprints/site/templates/admin/module/add_module.html
+++ b/app/Blueprints/site/templates/admin/module/add_module.html
@@ -20,7 +20,7 @@
       <br><br>
 
       <div class="ModualForm">
-        <form action="/" method="post">
+        <form action="" method="post">
           <input type="text" name="name" placeholder="Name of Module" /><br>
           <textarea name="desc" cols="30" rows="10" placeholder="Description" style="resize: none;"></textarea><br>
           <input type="text" name="days" max="4" placeholder="Days" /><br>
