--- a/app/Blueprints/site/templates/admin/course/about_course.html
+++ b/app/Blueprints/site/templates/admin/course/about_course.html
@@ -21,9 +21,9 @@
       <p class="sub1"><i class="fas fa-chevron-right"></i>Modules</p>
       <br><br>
       <div class="CourseList">
-        <span><i class="fas fa-caret-right"></i><p>Module 1</p></span>
-        <span><i class="fas fa-caret-right"></i><p>Module 2</p></span>
-        <span><i class="fas fa-caret-right"></i><p>Module 3</p></span>
+             {% for module in modules %}
+             	<span><i class="fas fa-caret-right">{{module.name}}</i></span>
+             {% endfor %}
       </div>
     </div>
   </div>
