--- a/app/Blueprints/site/templates/admin/master.html
+++ b/app/Blueprints/site/templates/admin/master.html
@@ -7,6 +7,10 @@
         <link rel="shortcut icon" href="{{url_for("static", filename = "img/icon.png")}}" />
         <link rel="stylesheet" href="{{url_for("static", filename = "scss/admin.min.css")}}" />
 		<link rel="stylesheet" href="{{url_for("static", filename = "css/css_for_charts.css")}}" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 		{% block head %}
 		{% endblock %}
     </head>
