--- a/app/Blueprints/site/templates/admin/test/about.html
+++ b/app/Blueprints/site/templates/admin/test/about.html
@@ -14,8 +14,8 @@
     <br><br>
 
     <div class="Board">
-      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Test</p></a></span>
-      <span class="button"><a href="#"><i class="fas fa-file-alt"></i><p>Browse Test</p></a></span>
+      <span class="button"><a href="/test"><i class="fas fa-plus-circle"></i><p>Add Test</p></a></span>
+      <span class="button"><a href="/test/new"><i class="fas fa-file-alt"></i><p>Browse Test</p></a></span>
       <br><br><br>
 
       <p class="sub1"><i class="fas fa-chevron-right"></i>About Test : {{test.name}}</p>
